--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
+    "next": "14.2.5",
+    "pdfjs": "^2.5.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-pdf": "^9.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.10",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
