--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pdfjs": "^2.5.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-gtm-module": "^2.0.11",
     "react-pdf": "^9.1.0"
   },
   "devDependencies": {
