--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.0.3",
     "core-js": "^3.38.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
-    "next": "14.2.5",
+    "next": "^15.0.3",
     "pdfjs": "^2.5.3",
     "react": "^18",
     "react-dom": "^18",
