--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.0.3",
+    "@supabase/supabase-js": "^2.49.8",
     "core-js": "^3.38.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
