--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "core-js": "^3.38.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
+    "lucide-react": "^0.511.0",
     "next": "^15.0.3",
     "pdfjs": "^2.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-gtm-module": "^2.0.11",
-    "react-pdf": "^9.1.0"
+    "react-pdf": "^9.1.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-gtm-module": "^2.0.3",
+    "@types/react-slick": "^0.23.13",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
